# rlPx4Controller

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  README.md  pyproject.toml  setup.py  stubgen.sh  uninstall.sh
bind/: polyTrajGen.cpp  pyControl.cpp  pyParallelControl.cpp
docs/source/: api.rst  conf.py  dynamic.rst  index.rst  sim_support.rst  usage.rst
include/: Derivative.hpp  HoverThrustEkf.hpp  MyMath.hpp  Px4AttitudeController.hpp  Px4ContollerParams.hpp  Px4ControllerParams.hpp  Px4Mixer.hpp  Px4RateController.hpp  SimplePositionController.hpp  droneStatus.hpp  parallelAttiController.hpp  parallelPosController.hpp  parallelRateController.hpp  parallelVelController.hpp  polynomial_traj.h
px4Controller/: __init__.py
px4Controller/traj_tools/: __init__.py  lemniscate.py
rlPx4Controller/: __init__.py  pyControl.pyi  pyParallelControl.pyi
rlPx4Controller/traj_tools/: __init__.py  lemniscate.py  polyTrajGen.pyi
src/: Px4ControllerParams.cpp  controller_test.cpp  polynomial_traj.cpp
test/flight_test/: flight_test.py  parallel_flight_test_pos.py  parallel_flight_test_rate.py
test/flight_test/tool/: de_math.py  show.py  show_3d.py
test/joystick_test/: js_test.py  manual_test.py
test/ploy_traj_test/: ploy_pos_ctl.py  ploy_traj_flight_test.py  show_3d.py  show_traj.py
test/simple_sim/: record.py  sim.py  udp_comm.py
test/simple_sim/robot/: drone.py  drone_view.py
